test/trivial/diten/printvisibleExtraArg.good
printvisibleExtraArg.chpl:2: error: get visible symbols may only have 0 or 1 arguments
