test/trivial/diten/printvisibleExtraArg.chpl
var xyzSymbol = 1;
__primitive(c"get visible symbols", true, false, false);
